<resources>
    <string name="app_name">Mini Bursa</string>
    <string name="app_license">copyright @minbursa 2021</string>
    <string name="welcome">Welcome</string>
    <string name="please_choose_your_preference_language">Please choose your preferred language!</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="start">Start</string>
    <string name="btn_try_again">try Again</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="error_server">timeout</string>
    <string name="error_msg">Something went wrong</string>
    <string name="session_ended">Session Ended</string>
    <string name="screen_shot_denied">Grant stoarge permission to take screenshot!</string>
    <string name="camera_permission_denied">Grant camera permission to take the 3 seconds video</string>
    <string name="screen_shot">take screenshot</string>
    <string name="alert_dialog_title">Mini Bursa</string>
    <string name="alert_dialog_all_info_in_english">All information entered must be in English</string>
    <string name="not_available_yet">This feature is coming soon to Al Alami app!</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="loading">Loading …</string>
    <string name="under_development">Under Development</string>
    <string name="ok">OK</string>
    <string name="none">None</string>
    <string name="edit">Edit</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="empty_string" />
    <string name="km">km</string>
    <string name="you_re_not_logged_in">You\'re Not Logged In.</string>
    <string name="you_need_to_login_into_your_account_to_see_this_screen">You need to login into your account\nto see this screen</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="no_activity_data_chart_err">No Data Yet !</string>
    <string name="choose_image_folders_mode_title">select Image</string>
    <string name="choose_image_done_button_txt">Done</string>
    <string name="choose_image_max_select_message">You have reached selection limit!</string>
    <string name="general_err_msg">"SomeThing Happened Please Try Again "</string>
    <string name="must_not_be_empty">must not be empty</string>
    <string name="must_be_at_least">must be at least </string>
    <string name="characters"> characters</string>
    <string name="numbers"> numbers</string>
    <string name="text">Text</string>
    <string name="date">Date</string>
    <string name="email_not_valid_err">Enter a valid email address (example: aaa@bbb.ccc)</string>
    <string name="phone_not_valid_err">Enter a valid phone number (example: 07xxxxxxx)</string>
    <string name="password_not_valid_err">Enter a valid password (example: P@ssw0rd)</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="password_not_match">Password not match</string>
    <string name="text_not_valid_err">Enter a valid Text</string>
    <string name="date_not_valid_err">Enter a valid date</string>
    <string name="time_not_valid_err">Enter a valid time</string>
    <string name="digits">digits</string>
    <string name="travllers">Travellers</string>
    <string name="next">Next</string>
    <string name="select_time">Select time</string>
    <string name="adult">Adult</string>
    <string name="submit">Submit</string>
    <string name="data_missing">Data missing</string>
    <string name="please_fill_data_fields">Please fill all the data fields</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hint_date">Date</string>
    <string name="time">Time</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="otp">OTP</string>
    <string name="number">Number</string>
    <string name="new_update">NEW UPDATE!</string>
    <string name="there_s_a_new_update_available_for_fly_us_vip">There’s a new update available for\nFLY US VIP</string>
    <string name="update_now">UPDATE NOW</string>
    <string name="remind_me_later">REMIND ME LATER</string>
    <string name="close_app">CLOSE APP</string>
    <string name="important_update">IMPORTANT UPDATE!</string>
    <string name="completed_successfully">Completed Successfully</string>
    <string name="continue_">Continue</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="title_on_boarding_1">Build</string>
    <string name="description_on_boarding_1">Build your startup with Mini Bursa.</string>
    <string name="title_on_boarding_2">Connect</string>
    <string name="description_on_boarding_2">Connecting the most promising\nstartups with investors to create\nimpactful change.</string>
    <string name="title_on_boarding_3">Invest</string>
    <string name="description_on_boarding_3">Invest in a Better Tomorrow!</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="dont_have_an_account">Don\'t have account?</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="reset_password">Reset password?</string>
    <string name="send_again">Send again</string>
    <string name="didn_t_receive_the_code">Didn\'t receive your code?</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="enter_the_verification_code_we_sent_to_your">Enter the verification code we sent to your</string>
    <string name="verify">Verify</string>
    <string name="full_name">Full Name</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="sign_up">Sign up</string>
    <string name="thousands_of_business_nwaiting_for_you">Thousands of business\nwaiting for you</string>
    <string name="by_creating_an_account_you_have_to_agree">By creating an account you have to agree</string>
    <string name="with_our">with our</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="agreement">Agreement</string>
    <string name="please_accept_the_terms_and_conditions">Please accept the terms and conditions</string>
    <string name="enable_touch_id">Enable Touch ID</string>
    <string name="touch_id_for_faster_login">Touch ID for faster login</string>
    <string name="enable_face_id_to_let_you_login_proceed_your_insurance_faster"><![CDATA[Enable Face ID to let you login & proceed your insurance faster.]]></string>
    <string name="skip_i_ll_do_this_later">Skip, I’ll do this later</string>
    <string name="go_to_home">Go to home</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_your_email_below_to_receive_instructions_to_reset_nyour_password">Enter your email below to receive instructions to reset your password</string>
    <string name="you_successfully_changed_your_password_nuse_the_new_password_to_log_in_to_your_account">You successfully changed your password.\nUse the new password to log in to your account.</string>
    <string name="success">Success!</string>
    <string name="change_your_password">Change your password</string>
    <string name="enter_a_new_password_below">Enter a new password below</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter your password</string>
    <string name="reset_password_">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="user_role">User Role</string>
    <string name="please_select_your_role">Please select your role</string>
    <string name="what_is_your_role">What is your Role?</string>
    <string name="before_continuing_we_want_to_know_what_your_role">Before continuing we want to know what\nyour role.</string>
    <string name="i_am_an_business_owner">I am an Business Owner</string>
    <string name="i_am_an_investor">I am an Investor</string>
    <string name="continue_as_visitor">Continue as Visitor</string>
    <string name="complete_your_investor_profile">Complete your Investor Profile</string>
    <string name="complete">Complete</string>
    <string name="available_on_request">Available On Request</string>
    <string name="investment_budget">Investment Budget</string>
    <string name="countries_">Countries:</string>
    <string name="countries">Countries</string>
    <string name="choose_sectores_of_specialisations">Choose Sectors of Specialisations:</string>
    <string name="select_country">Select Country</string>
    <string name="sectors_of_specialisation">Sectors of Specialisation</string>
    <string name="select_specialisation">Select Specialisation</string>
    <string name="begin_search">Begin Search</string>
    <string name="advertise_your_business_listing_today">Advertise your business listing today.</string>
    <string name="mini_bursa_gives_you_an_easy_way_to_showcase_your_business_with_the_advert_it_deserves">Mini Bursa gives you an easy way to showcase your business with the advert it deserves.</string>
    <string name="_7_days_free_trail">7 days free trail</string>
    <string name="unlimited_business_description">Unlimited business description</string>
    <string name="access_investors">Access Investors</string>
    <string name="nav_listing">Listing</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_profile">Profile</string>
    <string name="sell_or_buy_your_business">Sell or buy your business</string>
    <string name="businesses_for_sale">Businesses For Sale</string>
    <string name="see_all">See All</string>
    <string name="share_for_sale">Share For Sale</string>
    <string name="franchise">Franchise</string>
    <string name="business_news">Business News</string>
    <string name="wanna_list_your_business">Want to List Your Business?</string>
    <string name="list_business">List Business</string>
    <string name="list_your_business_with_us_in_simple_steps">List your business with us in simple Steps.</string>
    <string name="becoming_a_business_owner">Becoming a Business Owner ?</string>
    <string name="complete_your_listing">Complete your Listing</string>
    <string name="switch_to_your_business">Switch to your Business</string>
    <string name="welcome_back">Welcome back</string>
    <string name="showing_result">Showing Result</string>
    <string name="filter">Filter</string>
    <string name="my_favorites">My Favorites</string>
    <string name="reset">Reset</string>
    <string name="business_status">Business Status</string>
    <string name="active">Active</string>
    <string name="not_active">Not Active</string>
    <string name="founder_gender">Founder Gender</string>
    <string name="enter_postal_code_or_address">Enter Postal Code or Address</string>
    <string name="start_subscription">Start subscription</string>
    <string name="no_notifications_found">No Notifications found</string>
    <string name="your_received_notifications_will_appear_here">Your received notifications will appear here</string>
</resources>