<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_listing"
        android:icon="@drawable/ic_nav_listing"
        android:title="@string/nav_listing" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_nav_notification"
        android:title="@string/nav_notification" />

    <item
        android:id="@+id/nav_business_channels"
        android:icon="@drawable/ic_nav_messages"
        android:title="@string/nav_messages" />

    <!--    <item-->
    <!--        android:id="@+id/nav_statistics"-->
    <!--        android:icon="@drawable/ic_nav_statistics"-->
    <!--        android:title="@string/nav_statistics" />-->

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />

</menu>