<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.technzone.miniborsa.ui.subscription.viewmodel.SubscriptionViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/relativeHeader"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_10sdp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:layout_below="@id/layout_toolbar"
            android:layout_above="@id/btnContinue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/layouts_margin_start"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/layouts_margin_end"
                android:orientation="vertical">

                <com.technzone.miniborsa.ui.base.views.AppTextView
                    android:id="@+id/tvHeader"
                    style="@style/textview_normal_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advertise_your_business_listing_today"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_21ssp" />

                <com.technzone.miniborsa.ui.base.views.AppTextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:text="@string/mini_bursa_gives_you_an_easy_way_to_showcase_your_business_with_the_advert_it_deserves"
                    android:textColor="@color/black_alpha"
                    android:textSize="@dimen/_13ssp" />

                <com.technzone.miniborsa.ui.base.views.AppTextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_19sdp"
                    android:drawableStart="@drawable/ic_done"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/_7_days_free_trail"
                    android:textColor="@color/night_blue"
                    android:textSize="@dimen/_14ssp" />

                <com.technzone.miniborsa.ui.base.views.AppTextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableStart="@drawable/ic_done"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/unlimited_business_description"
                    android:textColor="@color/night_blue"
                    android:textSize="@dimen/_14ssp" />

                <com.technzone.miniborsa.ui.base.views.AppTextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableStart="@drawable/ic_done"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/access_investors"
                    android:textColor="@color/night_blue"
                    android:textSize="@dimen/_14ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/row_business_subscription" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/layouts_margin_start"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/layouts_margin_end"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/start_subscription"
            android:textSize="@dimen/_11ssp" />

    </RelativeLayout>

</layout>