<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.technzone.miniborsa.ui.investor.invistorroles.viewmodels.InvestorRoleViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/relativeHeader"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_10sdp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btnComplete"
            android:layout_marginTop="@dimen/_60sdp"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingBottom="@dimen/_30sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/layouts_margin_start"
                android:layout_marginEnd="@dimen/layouts_margin_end"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.technzone.miniborsa.ui.base.views.AppTextView
                    android:id="@+id/tvHeader"
                    style="@style/textview_normal_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_27sdp"
                    android:text="@string/complete_your_investor_profile"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_21ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textview_normal_medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/investment_budget"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:id="@+id/budget"
                        style="@style/textview_normal_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_edit"
                        android:drawablePadding="@dimen/_10sdp"
                        android:text="$400,000"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:progressDrawable="@drawable/seek_bar_progress"
                    android:thumb="@drawable/ic_seek_bar_thumb"
                    tools:max="78"
                    tools:progress="20" />


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:checked="true"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/available_on_request" />

                <TextView
                    style="@style/textview_normal_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:text="@string/countries"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    style="@style/textview_normal_regular"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:background="@drawable/ic_rectangle_unfocused"
                    android:drawableEnd="@drawable/ic_arrow_next"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/select_country"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSelectedCountries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cvSearch"
                    tools:listitem="@layout/row_selected_general" />

                <TextView
                    style="@style/textview_normal_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:text="@string/sectors_of_specialisation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    style="@style/textview_normal_regular"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:background="@drawable/ic_rectangle_unfocused"
                    android:drawableEnd="@drawable/ic_arrow_next"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/select_specialisation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSelectedSpecialisation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cvSearch"
                    tools:listitem="@layout/row_selected_general" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnComplete"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/layouts_margin_start"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/layouts_margin_end"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/complete"
            android:textSize="@dimen/_11ssp" />

    </RelativeLayout>

</layout>