<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/div">

        <com.technzone.minibursa.ui.base.views.AppImageView
            android:id="@+id/imgIcon"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_100sdp"
            android:src="@drawable/ic_no_notifications"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.technzone.minibursa.ui.base.views.AppTextView
            android:id="@+id/tvTitle"
            style="@style/textview_normal_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/no_notifications_found"
            android:textColor="@color/black_alpha75"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgIcon" />

        <com.technzone.minibursa.ui.base.views.AppTextView
            android:id="@+id/tvSubTitle"
            style="@style/textview_normal_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/your_received_notifications_will_appear_here"
            android:textColor="@color/black_alpha75"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/continue_"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>